# Recrest

./: .env.example  .gitattributes  .gitignore  .hintrc  .prettierignore  .prettierrc  ACCESSIBILITY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  commitlint.config.cjs  lint-staged.config.mjs  package.json  tsconfig.base.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/install-deps/: action.yml
.github/workflows/: ci.yml  deploy-landingpage.yml  release-please.yml  release-tauri-beta.yml  release-tauri.yml
.husky/: pre-commit  pre-push
app/: .gitignore  .prettierrc  CLAUDE.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/.storybook/: main.ts  preview.tsx
app/src/: App.tsx  Welcome.stories.tsx  main.tsx  test-setup.ts  vite-env.d.ts
app/src-tauri/: Cargo.toml  README-signing.md  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/icons-dev/: icon.icns
app/src-tauri/installer/: README.md
app/src-tauri/installer-assets/: README.md  generate.mjs
app/src-tauri/resources/: recrest-launcher.sh  recrest.desktop
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/auth/: oauth.rs  token.rs
app/src-tauri/src/commands/: activity.rs  clone.rs  dev.rs  error.rs  git_info.rs  git_ops.rs  ide.rs  mod.rs  notifications.rs  oauth.rs  process.rs  providers.rs  remote_import.rs  repos.rs  search.rs  settings.rs  system.rs  terminal.rs  tray.rs  update.rs  window.rs
app/src-tauri/src/config/: settings.rs  store.rs
app/src-tauri/src/git/: author_normalize.rs  branches.rs  logo.rs  mod.rs  scanner.rs  status.rs  watcher.rs
app/src-tauri/src/platform/: mod.rs
app/src-tauri/src/platform/windows/: mod.rs  snap.rs
app/src-tauri/src/providers/: api.rs  bitbucket.rs  github.rs  gitlab.rs  mod.rs  registry.rs  trait.rs
app/src-tauri/src/update/: github.rs  mod.rs
app/src/components/: Skeleton.tsx
app/src/components/brand/: Logo.tsx
app/src/components/icons/: Icon.tsx
app/src/components/layout/: AppShell.tsx  DetailPane.tsx  Header.tsx  Sidebar.test.tsx  Sidebar.tsx  Titlebar.tsx  popout.ts
app/src/components/onboarding/: OnboardingWizard.tsx
app/src/components/prs/: PrList.tsx
app/src/components/repos/: ChangedFilesList.tsx  RepoAvatar.tsx  RepoDetail.tsx  RepoList.tsx  RepoRow.tsx  RepoStats.tsx  primitives.tsx
app/src/components/search/: SearchOverlay.tsx
app/src/hooks/: useActiveIde.ts  useCheckRuns.ts  useDeepLinks.ts  useDevFlag.test.ts  useDevFlag.ts  useDevice.ts  useDrawerSwipe.ts  useEnrichedRepos.ts  useFirstRun.ts  useGitInfo.ts  useGlobalEvents.ts  useGlobalShortcuts.ts  useLastSeenVersion.ts  useNotificationTriggers.test.ts  useNotificationTriggers.ts  usePageSwipe.ts  usePlatform.ts  usePrEvents.ts  useProviders.ts  useRecentCommits.ts  useRepoFavicon.ts  useRepoLogo.ts  useRepos.ts  useScrollRestoration.ts  useSearch.ts  useTauri.ts  useTauriNotifications.ts  useTheme.ts  useTrayBadgeSync.ts
app/src/i18n/: index.ts
app/src/lib/: activityAggregates.test.ts  activityAggregates.ts  activityStats.ts  authorNormalize.test.ts  authorNormalize.ts  gravatar.ts  initials.ts  languages.ts  repoEnrich.test.ts  repoEnrich.ts  tauri.ts  toast.ts
app/src/pages/: ActivityPage.tsx  BranchesPage.tsx  DashboardPage.tsx  MergeRequestsPage.tsx  PullRequestsPage.tsx  RepoDetailPage.tsx  ReposPage.tsx  SettingsPage.tsx  StandaloneDetailPage.tsx
app/src/scripts/: fix-imports.js
app/src/store/: hooks.ts  index.ts  persistence.ts  resetListener.test.ts  resetListener.ts
app/src/styles/: globals.css  layout.css  layout.scss  page-anim.css  page-anim.scss  tokens.css  tokens.scss  views.css  views.scss
app/src/test-utils/: fixtures.ts
docs/: ARCHITECTURE.md  RELEASE.md  TESTING.md  UNFINISHED.md
docs/plans/: 00-acceptance-checklist.md  01-bugs-and-ui-polish.md  02-repo-and-git-actions.md  03-activity-stats-and-settings.md  04-material-ui-migration.md  bugs.md  future.md  implementation-plan.md  page-mount-animations.md
landingpage/: .prettierrc  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
landingpage/src/: App.tsx  main.tsx
landingpage/src/components/: Contribute.tsx  DataFlow.tsx  DownloadButton.tsx  Footer.tsx  Hero.tsx  HeroDemo.tsx  LanguageSwitcher.tsx  Nav.tsx  Privacy.tsx  ThemeToggle.tsx
landingpage/src/data/: demoWorkspace.ts  mockRepos.test.ts  mockRepos.ts
landingpage/src/hooks/: useDevice.ts  useDocumentLang.ts  useLegalRoute.ts  useOsDetect.test.ts  useOsDetect.ts  useParallax.ts  useRotatingSelection.ts  useScrollReveal.ts  useScrolledNav.ts  useTheme.ts
landingpage/src/i18n/: de.json  en.json  index.ts
landingpage/src/pages/: Accessibility.tsx  Imprint.tsx  LegalLayout.tsx  PrivacyPolicy.tsx
landingpage/src/styles/: globals.css  globals.scss  tokens.css
scripts/: lint-staged-eslint.mjs
shared/: .prettierrc  CLAUDE.md  eslint.config.js  package.json  tsconfig.json
shared/src/: index.ts
shared/src/constants/: app.ts  classnames.ts  commands.ts  deep-links.ts  events.ts  git.ts  ide.ts  legal.test.ts  legal.ts  polling.ts  providers.ts  routes.ts  storage-keys.ts  ui.ts
shared/src/types/: activity.ts  errors.ts  git.ts  ide.ts  legal.ts  notifications.ts  pr.ts  provider.ts  remote.ts  repo.ts  settings.ts  tauri.ts  updater.ts
shared/src/utils/: formatting.test.ts  formatting.ts  languages.ts  matching.test.ts  matching.ts
tests/: .prettierrc  CLAUDE.md  eslint.config.js  package.json  playwright.config.ts  tsconfig.json
tests/src/e2e/: smoke.spec.ts
tests/src/fixtures/: a11y.fixture.ts  app.fixture.ts  landing.fixture.ts
tests/src/helpers/: constants.ts  selectors.ts  tauri-stub.ts  viewports.ts
tests/src/setup/: global.setup.ts  global.teardown.ts
(+475 files in other folders)
