[package]
name = "recrest"
version = "0.7.0" # x-release-please-version
description = "Recrest — A lightweight developer dashboard"
authors = ["SoftVentures"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "recrest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.2"
tauri-plugin-store = "2.4"
tauri-plugin-notification = "2.2"
tauri-plugin-os = "2.3"
tauri-plugin-shell = "2.3"
tauri-plugin-autostart = "2.5"
tauri-plugin-updater = "2.9"
tauri-plugin-deep-link = "2.4"
tauri-plugin-process = "2.3"
tauri-plugin-single-instance = "2.3"
tauri-plugin-dialog = "2.3"
sentry = "0.47"
os_info = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process", "io-util"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "https", "ssh", "ssh_key_from_memory"] }
notify = "8.2"
notify-debouncer-full = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = { version = "3.5", features = ["apple-native", "windows-native", "linux-native"] }
url = "2.5"
dirs = "5.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
urlencoding = "2.1.3"
base64 = "0.22.1"
which = "8"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[target.'cfg(windows)'.dependencies]
# Only needed for setting the AppUserModelID so Windows Toast notifications
# attribute to "Recrest" instead of the parent process (e.g. powershell.exe
# in dev). `windows-sys` is ~150kb and compiles in ~2s, much lighter than
# the full `windows` crate.
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_Foundation"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
