[package]
name = "recrest"
version = "0.7.0" # x-release-please-version
description = "Recrest — A lightweight developer dashboard"
authors = ["SoftVentures"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "recrest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.2"
tauri-plugin-store = "2.4"
tauri-plugin-notification = "2.2"
tauri-plugin-os = "2.3"
tauri-plugin-shell = "2.3"
tauri-plugin-autostart = "2.5"
tauri-plugin-updater = "2.9"
tauri-plugin-deep-link = "2.4"
tauri-plugin-process = "2.3"
tauri-plugin-single-instance = "2.3"
tauri-plugin-dialog = "2.3"
sentry = "0.38"
os_info = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process", "io-util"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "https", "ssh", "ssh_key_from_memory"] }
notify = "8.2"
notify-debouncer-full = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = { version = "3.5", features = ["apple-native", "windows-native", "linux-native"] }
url = "2.5"
dirs = "5.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
urlencoding = "2.1.3"
base64 = "0.22.1"
which = "8"
deunicode = "1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[target.'cfg(windows)'.dependencies]
# Single Win32 dependency (M4 — was windows + windows-sys side-by-side).
# Used by `platform::windows::snap` to subclass the main HWND so WM_NCHITTEST
# can return HTMAXBUTTON over the maximize button — that's the trigger
# Windows 11 needs to surface the Snap-Layouts flyout — and by `lib.rs::
# set_app_user_model_id` so Toast notifications attribute to "Recrest"
# instead of the parent process (e.g. powershell.exe in dev). The richer
# `windows` crate is needed (vs `windows-sys`) because `SetWindowSubclass`
# lives in the Win32 ABI helpers and we want safe HWND/LPARAM wrappers.
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_Foundation", "Win32_Graphics_Gdi"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Direct notify-rust use on Linux so we can attach the Recrest icon name +
# image-path hint that dunst/Plasma/GNOME need to display the app logo
# on toasts. The Tauri notification plugin doesn't expose those fields.
notify-rust = { version = "4", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
